; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/sxs/extr_cache.c_install_policy.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/sxs/extr_cache.c_install_policy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.assembly = type { i32, i32, i32, i32 }

@E_OUTOFMEMORY = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"failed to copy policy manifest file 0x%08x\0A\00", align 1
@S_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.assembly*)* @install_policy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @install_policy(i32* %0, %struct.assembly* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.assembly*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store %struct.assembly* %1, %struct.assembly** %5, align 8
  %9 = load %struct.assembly*, %struct.assembly** %5, align 8
  %10 = getelementptr inbounds %struct.assembly, %struct.assembly* %9, i32 0, i32 3
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.assembly*, %struct.assembly** %5, align 8
  %13 = getelementptr inbounds %struct.assembly, %struct.assembly* %12, i32 0, i32 2
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.assembly*, %struct.assembly** %5, align 8
  %16 = getelementptr inbounds %struct.assembly, %struct.assembly* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.assembly*, %struct.assembly** %5, align 8
  %19 = getelementptr inbounds %struct.assembly, %struct.assembly* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32* @build_policy_filename(i32 %11, i32 %14, i32 %17, i32 %20)
  store i32* %21, i32** %6, align 8
  %22 = load i32*, i32** %6, align 8
  %23 = icmp ne i32* %22, null
  br i1 %23, label %26, label %24

24:                                               ; preds = %2
  %25 = load i32, i32* @E_OUTOFMEMORY, align 4
  store i32 %25, i32* %3, align 4
  br label %44

26:                                               ; preds = %2
  %27 = load i32*, i32** %4, align 8
  %28 = load i32*, i32** %6, align 8
  %29 = load i32, i32* @FALSE, align 4
  %30 = call i32 @CopyFileW(i32* %27, i32* %28, i32 %29)
  store i32 %30, i32* %7, align 4
  %31 = call i32 (...) @GetProcessHeap()
  %32 = load i32*, i32** %6, align 8
  %33 = call i32 @HeapFree(i32 %31, i32 0, i32* %32)
  %34 = load i32, i32* %7, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %42, label %36

36:                                               ; preds = %26
  %37 = call i32 (...) @GetLastError()
  %38 = call i32 @HRESULT_FROM_WIN32(i32 %37)
  store i32 %38, i32* %8, align 4
  %39 = load i32, i32* %8, align 4
  %40 = call i32 @WARN(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i32 %39)
  %41 = load i32, i32* %8, align 4
  store i32 %41, i32* %3, align 4
  br label %44

42:                                               ; preds = %26
  %43 = load i32, i32* @S_OK, align 4
  store i32 %43, i32* %3, align 4
  br label %44

44:                                               ; preds = %42, %36, %24
  %45 = load i32, i32* %3, align 4
  ret i32 %45
}

declare dso_local i32* @build_policy_filename(i32, i32, i32, i32) #1

declare dso_local i32 @CopyFileW(i32*, i32*, i32) #1

declare dso_local i32 @HeapFree(i32, i32, i32*) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i32 @HRESULT_FROM_WIN32(i32) #1

declare dso_local i32 @GetLastError(...) #1

declare dso_local i32 @WARN(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
